# convy

./: .convy.toml  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  install.sh
src/: README.md  changelog.rs  cli.rs  commit_msg  lexer.rs  lib.rs  main.rs  syntax.rs  tokenizer.rs  tui.rs  validation.rs
tests/: changelog_integration_tests.rs
