[package]
name = "convy"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "~1", features = ["derive"] }
thiserror = "1.0.48"
toml = "0.8.13"


[profile.release]
opt-level = 3
