[package]
name = "convy"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
logos = "0.14.2"
serde = { version = "~1", features = ["derive"] }
toml = "0.8.13"


[profile.release]
opt-level = 3
